fix text align and en-US

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,4 +33,5 @@ html:lang(zh-Hant-TW) {
 }
 *:not(:lang(zh)):not(:lang(ja)) {
 	font-family: $serif-font-family;
+	text-align: left;
 }
